--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Relatório de Rede Sociais</title>
+    <title>Relatório de Trabalhadores </title>
 </head>
 <body>
     <header>
-        <h1>Relatório [Tema da sua base de dados]</h1>
+        <h1>Relatório RTrabalhadores </h1>
         <nav>
             <a href="index.html">Mundo</a>
             <a href="#">Minha escola</a>
@@ -22,7 +22,7 @@
         </section>
     </main>
     <footer>
-        <p>Desenvolvido por [Insira seu nome aqui]</p>
+        <p>Desenvolvido por Louise</p>
     </footer>
     <script type="module" src="graficos/informacoesGlobais.js"></script>
 </body>
