--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <h1>Relatório RTrabalhadores </h1>
+        <h1>Relatório Trabalhadores </h1>
         <nav>
             <a href="index.html">Mundo</a>
             <a href="#">Minha escola</a>
@@ -15,10 +15,9 @@
     </header>
     <main class="graficos-section">
         <section id="graficos-container" class="graficos-container">
-            <p class="graficos-container__texto">
-                <!-- Insira seu texto aqui -->
-                No mundo existem 7.888.000.000  de pessoas, dos quais 3.000.000.000 são trabalhadores e  desses, 2.000.000.000 utilizam algum tipo de transporte para ir ao trabalho, levando um tempo médio de deslocamento de 54 minutos. 
-            </p>
+           <!-- <p class="graficos-container__texto">
+              No mundo existem 7.888.000.000  de pessoas, dos quais 3.000.000.000 são trabalhadores e  desses, 2.000.000.000 utilizam algum tipo de transporte para ir ao trabalho, levando um tempo médio de deslocamento de 54 minutos. 
+            </p> -->
         </section>
     </main>
     <footer>
